--- a/backend/src/.env
+++ b/backend/src/.env
@@ -1,5 +1,5 @@
 
-MONGO_URI=mongodb+srv://quizuser:quizpass123@cluster0.dmsdgkf.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=
 SESSION_SECRET=your_secret_key_123
 PORT=5000
 JWT_SECRET=supersecretkey
